Changed one of the displayed projects

--- a/index.html
+++ b/index.html
@@ -144,25 +144,28 @@
         </div>
         <div class="project">
           <div class="project-img">
-            <img src="./imgs/library.png" alt="" />
+            <img src="./imgs/tictactoe.png" alt="" />
             <div class="img-overlay"></div>
           </div>
           <div class="project-content">
             <div class="project-header">
-              <h2>Library</h2>
+              <h2>Tic-Tac-Toe</h2>
               <div class="project-icons">
-                <a href="https://github.com/Modder65/Library" target="_blank"
+                <a
+                  href="https://github.com/Modder65/Tic-Tac-Toe"
+                  target="_blank"
                   ><img src="./imgs/github-mark.svg" alt=""
                 /></a>
-                <a href="https://modder65.github.io/Library/" target="_blank"
+                <a
+                  href="https://modder65.github.io/Tic-Tac-Toe/"
+                  target="_blank"
                   ><img src="./imgs/open.svg" alt=""
                 /></a>
               </div>
             </div>
             <p>
-              A virtual library that lets the user enter a book, including the
-              title, author, and completion status. This is then displayed to
-              the page in the form of a card.
+              Tic-Tac-Toe game that supports co-op play from the same device, as
+              well as a player vs. computer mode.
             </p>
           </div>
         </div>
