--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
           <div class="project-content">
             <div class="project-header">
-              <h2>Restaurant Page</h2>
+              <h2>Pizzeria</h2>
               <div class="project-icons">
                 <a
                   href="https://github.com/Modder65/Restaurant-Page"
