Replaced drop-shadow with box-shadow for performance increase; Made images clickable with links to each project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <header>
@@ -42,17 +42,19 @@
         <div class="project">
           <div class="project-img">
             <img src="./imgs/battleship.png" alt="" />
-            <div class="img-overlay"></div>
+            <a href="https://modder65.github.io/Battleship/" target="_blank"
+              ><div class="img-overlay"></div
+            ></a>
           </div>
           <div class="project-content">
             <div class="project-header">
               <h2>BattleShip</h2>
               <div class="project-icons">
                 <a href="https://github.com/Modder65/Battleship" target="_blank"
-                  ><img src="./imgs/github-mark.svg" alt=""
+                  ><img src="./imgs/github-mark.svg" alt="" class="github"
                 /></a>
                 <a href="https://modder65.github.io/Battleship/" target="_blank"
-                  ><img src="./imgs/open.svg" alt=""
+                  ><img src="./imgs/open.svg" alt="" class="open"
                 /></a>
               </div>
             </div>
@@ -66,7 +68,9 @@
         <div class="project">
           <div class="project-img">
             <img src="./imgs/weatherapp.png" alt="" />
-            <div class="img-overlay"></div>
+            <a href="https://modder65.github.io/Weather-App/" target="_blank"
+              ><div class="img-overlay"></div
+            ></a>
           </div>
           <div class="project-content">
             <div class="project-header">
@@ -75,12 +79,12 @@
                 <a
                   href="https://github.com/Modder65/Weather-App"
                   target="_blank"
-                  ><img src="./imgs/github-mark.svg" alt=""
+                  ><img src="./imgs/github-mark.svg" alt="" class="github"
                 /></a>
                 <a
                   href="https://modder65.github.io/Weather-App/"
                   target="_blank"
-                  ><img src="./imgs/open.svg" alt=""
+                  ><img src="./imgs/open.svg" alt="" class="open"
                 /></a>
               </div>
             </div>
@@ -94,17 +98,19 @@
         <div class="project">
           <div class="project-img">
             <img src="./imgs/todolist.png" alt="" />
-            <div class="img-overlay"></div>
+            <a href="https://modder65.github.io/Todo-List/" target="_blank"
+              ><div class="img-overlay"></div
+            ></a>
           </div>
           <div class="project-content">
             <div class="project-header">
               <h2>Todo List</h2>
               <div class="project-icons">
                 <a href="https://github.com/Modder65/Todo-List" target="_blank"
-                  ><img src="./imgs/github-mark.svg" alt=""
+                  ><img src="./imgs/github-mark.svg" alt="" class="github"
                 /></a>
                 <a href="https://modder65.github.io/Todo-List/" target="_blank"
-                  ><img src="./imgs/open.svg" alt=""
+                  ><img src="./imgs/open.svg" alt="" class="open"
                 /></a>
               </div>
             </div>
@@ -118,7 +124,11 @@
         <div class="project">
           <div class="project-img">
             <img src="./imgs/pizzaplace.png" alt="" />
-            <div class="img-overlay"></div>
+            <a
+              href="https://modder65.github.io/Restaurant-Page/"
+              target="_blank"
+              ><div class="img-overlay"></div
+            ></a>
           </div>
           <div class="project-content">
             <div class="project-header">
@@ -127,12 +137,12 @@
                 <a
                   href="https://github.com/Modder65/Restaurant-Page"
                   target="_blank"
-                  ><img src="./imgs/github-mark.svg" alt=""
+                  ><img src="./imgs/github-mark.svg" alt="" class="github"
                 /></a>
                 <a
                   href="https://modder65.github.io/Restaurant-Page/"
                   target="_blank"
-                  ><img src="./imgs/open.svg" alt=""
+                  ><img src="./imgs/open.svg" alt="" class="open"
                 /></a>
               </div>
             </div>
@@ -145,7 +155,9 @@
         <div class="project">
           <div class="project-img">
             <img src="./imgs/tictactoe.png" alt="" />
-            <div class="img-overlay"></div>
+            <a href="https://modder65.github.io/Tic-Tac-Toe/" target="_blank"
+              ><div class="img-overlay"></div
+            ></a>
           </div>
           <div class="project-content">
             <div class="project-header">
@@ -154,12 +166,12 @@
                 <a
                   href="https://github.com/Modder65/Tic-Tac-Toe"
                   target="_blank"
-                  ><img src="./imgs/github-mark.svg" alt=""
+                  ><img src="./imgs/github-mark.svg" alt="" class="github"
                 /></a>
                 <a
                   href="https://modder65.github.io/Tic-Tac-Toe/"
                   target="_blank"
-                  ><img src="./imgs/open.svg" alt=""
+                  ><img src="./imgs/open.svg" alt="" class="open"
                 /></a>
               </div>
             </div>
@@ -172,21 +184,25 @@
         <div class="project">
           <div class="project-img">
             <img src="./imgs/dashboard.png" alt="" />
-            <div class="img-overlay"></div>
+            <a
+              href="https://modder65.github.io/admin-dashboard/"
+              target="_blank"
+              ><div class="img-overlay"></div
+            ></a>
           </div>
           <div class="project-content">
             <div class="project-header">
-              <h2>Admin Dashboard</h2>
+              <h2>Dashboard</h2>
               <div class="project-icons">
                 <a
                   href="https://github.com/Modder65/admin-dashboard"
                   target="_blank"
-                  ><img src="./imgs/github-mark.svg" alt=""
+                  ><img src="./imgs/github-mark.svg" alt="" class="github"
                 /></a>
                 <a
                   href="https://modder65.github.io/admin-dashboard/"
                   target="_blank"
-                  ><img src="./imgs/open.svg" alt=""
+                  ><img src="./imgs/open.svg" alt="" class="open"
                 /></a>
               </div>
             </div>
