Rewrote html to include semantic practices and fixed css to work with the new html

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <header>
-      <div class="about-me">
-        <div class="about-me-img">
+      <section class="about-me">
+        <figure class="about-me-img">
           <img src="./imgs/mountains1.jpg" alt="" />
-        </div>
-        <div class="about-me-content">
+        </figure>
+        <article class="about-me-content">
           <h1>About Me</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -24,39 +24,39 @@
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum.
           </p>
-          <div class="about-me-icons">
+          <nav class="about-me-icons">
             <a
               href="https://github.com/Modder65?tab=repositories"
               target="_blank"
               ><img src="./imgs/github-mark.svg" alt=""
             /></a>
-          </div>
-        </div>
-      </div>
+          </nav>
+        </article>
+      </section>
     </header>
     <main>
       <div class="content-heading">
         <h2>My Work</h2>
       </div>
-      <div class="projects-container">
-        <div class="project">
-          <div class="project-img">
+      <section class="projects-container">
+        <article class="project">
+          <figure class="project-img">
             <img src="./imgs/battleship.png" alt="" />
             <a href="https://modder65.github.io/Battleship/" target="_blank"
-              ><div class="img-overlay"></div
+              ><figcaption class="img-overlay"></figcaption
             ></a>
-          </div>
+          </figure>
           <div class="project-content">
             <div class="project-header">
-              <h2>BattleShip</h2>
-              <div class="project-icons">
+              <h3>BattleShip</h3>
+              <nav class="project-icons">
                 <a href="https://github.com/Modder65/Battleship" target="_blank"
                   ><img src="./imgs/github-mark.svg" alt="" class="github"
                 /></a>
                 <a href="https://modder65.github.io/Battleship/" target="_blank"
                   ><img src="./imgs/open.svg" alt="" class="open"
                 /></a>
-              </div>
+              </nav>
             </div>
             <p>
               This is a simple implementation of the classic Battleship game.
@@ -64,18 +64,18 @@
               turns with the computer to sink each other's ships.
             </p>
           </div>
-        </div>
-        <div class="project">
-          <div class="project-img">
+        </article>
+        <article class="project">
+          <figure class="project-img">
             <img src="./imgs/weatherapp.png" alt="" />
             <a href="https://modder65.github.io/Weather-App/" target="_blank"
-              ><div class="img-overlay"></div
+              ><figcaption class="img-overlay"></figcaption
             ></a>
-          </div>
+          </figure>
           <div class="project-content">
             <div class="project-header">
-              <h2>Weather App</h2>
-              <div class="project-icons">
+              <h3>Weather App</h3>
+              <nav class="project-icons">
                 <a
                   href="https://github.com/Modder65/Weather-App"
                   target="_blank"
@@ -86,7 +86,7 @@
                   target="_blank"
                   ><img src="./imgs/open.svg" alt="" class="open"
                 /></a>
-              </div>
+              </nav>
             </div>
             <p>
               Weather app displaying detailed information on the current day as
@@ -94,25 +94,25 @@
               city, state, or zip code.
             </p>
           </div>
-        </div>
-        <div class="project">
-          <div class="project-img">
+        </article>
+        <article class="project">
+          <figure class="project-img">
             <img src="./imgs/todolist.png" alt="" />
             <a href="https://modder65.github.io/Todo-List/" target="_blank"
-              ><div class="img-overlay"></div
+              ><figcaption class="img-overlay"></figcaption
             ></a>
-          </div>
+          </figure>
           <div class="project-content">
             <div class="project-header">
-              <h2>Todo List</h2>
-              <div class="project-icons">
+              <h3>Todo List</h3>
+              <nav class="project-icons">
                 <a href="https://github.com/Modder65/Todo-List" target="_blank"
                   ><img src="./imgs/github-mark.svg" alt="" class="github"
                 /></a>
                 <a href="https://modder65.github.io/Todo-List/" target="_blank"
                   ><img src="./imgs/open.svg" alt="" class="open"
                 /></a>
-              </div>
+              </nav>
             </div>
             <p>
               Todo List that lets you create projects to store specific tasks in
@@ -120,20 +120,20 @@
               date.
             </p>
           </div>
-        </div>
-        <div class="project">
-          <div class="project-img">
+        </article>
+        <article class="project">
+          <figure class="project-img">
             <img src="./imgs/pizzaplace.png" alt="" />
             <a
               href="https://modder65.github.io/Restaurant-Page/"
               target="_blank"
-              ><div class="img-overlay"></div
+              ><figcaption class="img-overlay"></figcaption
             ></a>
-          </div>
+          </figure>
           <div class="project-content">
             <div class="project-header">
-              <h2>Pizzeria</h2>
-              <div class="project-icons">
+              <h3>Pizzeria</h3>
+              <nav class="project-icons">
                 <a
                   href="https://github.com/Modder65/Restaurant-Page"
                   target="_blank"
@@ -144,25 +144,25 @@
                   target="_blank"
                   ><img src="./imgs/open.svg" alt="" class="open"
                 /></a>
-              </div>
+              </nav>
             </div>
             <p>
               Simple website for a pizzeria including sections for the home,
               menu, and contact information.
             </p>
           </div>
-        </div>
-        <div class="project">
-          <div class="project-img">
+        </article>
+        <article class="project">
+          <figure class="project-img">
             <img src="./imgs/tictactoe.png" alt="" />
             <a href="https://modder65.github.io/Tic-Tac-Toe/" target="_blank"
-              ><div class="img-overlay"></div
+              ><figcaption class="img-overlay"></figcaption
             ></a>
-          </div>
+          </figure>
           <div class="project-content">
             <div class="project-header">
-              <h2>Tic-Tac-Toe</h2>
-              <div class="project-icons">
+              <h3>Tic-Tac-Toe</h3>
+              <nav class="project-icons">
                 <a
                   href="https://github.com/Modder65/Tic-Tac-Toe"
                   target="_blank"
@@ -173,27 +173,27 @@
                   target="_blank"
                   ><img src="./imgs/open.svg" alt="" class="open"
                 /></a>
-              </div>
+              </nav>
             </div>
             <p>
               Tic-Tac-Toe game that supports co-op play from the same device, as
               well as a player vs. computer mode.
             </p>
           </div>
-        </div>
-        <div class="project">
-          <div class="project-img">
+        </article>
+        <article class="project">
+          <figure class="project-img">
             <img src="./imgs/dashboard.png" alt="" />
             <a
               href="https://modder65.github.io/admin-dashboard/"
               target="_blank"
-              ><div class="img-overlay"></div
+              ><figcaption class="img-overlay"></figcaption
             ></a>
-          </div>
+          </figure>
           <div class="project-content">
             <div class="project-header">
-              <h2>Dashboard</h2>
-              <div class="project-icons">
+              <h3>Dashboard</h3>
+              <nav class="project-icons">
                 <a
                   href="https://github.com/Modder65/admin-dashboard"
                   target="_blank"
@@ -204,18 +204,18 @@
                   target="_blank"
                   ><img src="./imgs/open.svg" alt="" class="open"
                 /></a>
-              </div>
+              </nav>
             </div>
             <p>
               Full dashboard-like design using a layout created with css grid
               and flexbox.
             </p>
           </div>
-        </div>
-      </div>
+        </article>
+      </section>
     </main>
     <footer>
-      <div class="footer-content">
+      <address class="footer-content">
         <h2>Contact Me</h2>
         <p>1234 Random Road<br />Random Town, State 12345</p>
         <p></p>
@@ -229,15 +229,15 @@
             <p>fakeemail@fake.com</p>
           </div>
         </div>
-      </div>
-      <div class="footer-main">
+      </address>
+      <section class="footer-main">
         <div>
           <p>2023 Alex Green</p>
           <a href="https://github.com/Modder65?tab=repositories" target="_blank"
             ><img src="./imgs/github-mark-white.svg" alt=""
           /></a>
         </div>
-      </div>
+      </section>
     </footer>
   </body>
 </html>
