--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header>
+    <a href="#main-content" class="skip-link">Skip to Content</a>
+    <header role="banner">
       <section class="about-me">
         <figure class="about-me-img">
-          <img src="./imgs/mountains1.jpg" alt="" />
+          <img src="./imgs/mountains1.jpg" alt="Mountain Landscape" />
         </figure>
         <article class="about-me-content">
           <h1>About Me</h1>
@@ -24,24 +25,24 @@
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum.
           </p>
-          <nav class="about-me-icons">
+          <nav class="about-me-icons" role="navigation">
             <a
               href="https://github.com/Modder65?tab=repositories"
               target="_blank"
-              ><img src="./imgs/github-mark.svg" alt=""
+              ><img src="./imgs/github-mark.svg" alt="Github Logo Icon"
             /></a>
           </nav>
         </article>
       </section>
     </header>
-    <main>
+    <main id="main-content" role="main">
       <div class="content-heading">
         <h2>My Work</h2>
       </div>
-      <section class="projects-container">
+      <section class="projects-container" role="region">
         <article class="project">
           <figure class="project-img">
-            <img src="./imgs/battleship.png" alt="" />
+            <img src="./imgs/battleship.png" alt="Battleship Game Screenshot" />
             <a href="https://modder65.github.io/Battleship/" target="_blank"
               ><figcaption class="img-overlay"></figcaption
             ></a>
@@ -49,12 +50,18 @@
           <div class="project-content">
             <div class="project-header">
               <h3>BattleShip</h3>
-              <nav class="project-icons">
+              <nav class="project-icons" role="navigation">
                 <a href="https://github.com/Modder65/Battleship" target="_blank"
-                  ><img src="./imgs/github-mark.svg" alt="" class="github"
+                  ><img
+                    src="./imgs/github-mark.svg"
+                    alt="Github Logo Icon"
+                    class="github"
                 /></a>
                 <a href="https://modder65.github.io/Battleship/" target="_blank"
-                  ><img src="./imgs/open.svg" alt="" class="open"
+                  ><img
+                    src="./imgs/open.svg"
+                    alt="Open Project Icon"
+                    class="open"
                 /></a>
               </nav>
             </div>
@@ -67,7 +74,7 @@
         </article>
         <article class="project">
           <figure class="project-img">
-            <img src="./imgs/weatherapp.png" alt="" />
+            <img src="./imgs/weatherapp.png" alt="Weather Website Screenshot" />
             <a href="https://modder65.github.io/Weather-App/" target="_blank"
               ><figcaption class="img-overlay"></figcaption
             ></a>
@@ -75,16 +82,22 @@
           <div class="project-content">
             <div class="project-header">
               <h3>Weather App</h3>
-              <nav class="project-icons">
+              <nav class="project-icons" role="navigation">
                 <a
                   href="https://github.com/Modder65/Weather-App"
                   target="_blank"
-                  ><img src="./imgs/github-mark.svg" alt="" class="github"
+                  ><img
+                    src="./imgs/github-mark.svg"
+                    alt="Github Logo Icon"
+                    class="github"
                 /></a>
                 <a
                   href="https://modder65.github.io/Weather-App/"
                   target="_blank"
-                  ><img src="./imgs/open.svg" alt="" class="open"
+                  ><img
+                    src="./imgs/open.svg"
+                    alt="Open Project Icon"
+                    class="open"
                 /></a>
               </nav>
             </div>
@@ -97,7 +110,7 @@
         </article>
         <article class="project">
           <figure class="project-img">
-            <img src="./imgs/todolist.png" alt="" />
+            <img src="./imgs/todolist.png" alt="Todo List Project Screenshot" />
             <a href="https://modder65.github.io/Todo-List/" target="_blank"
               ><figcaption class="img-overlay"></figcaption
             ></a>
@@ -105,12 +118,18 @@
           <div class="project-content">
             <div class="project-header">
               <h3>Todo List</h3>
-              <nav class="project-icons">
+              <nav class="project-icons" role="navigation">
                 <a href="https://github.com/Modder65/Todo-List" target="_blank"
-                  ><img src="./imgs/github-mark.svg" alt="" class="github"
+                  ><img
+                    src="./imgs/github-mark.svg"
+                    alt="Github Logo Icon"
+                    class="github"
                 /></a>
                 <a href="https://modder65.github.io/Todo-List/" target="_blank"
-                  ><img src="./imgs/open.svg" alt="" class="open"
+                  ><img
+                    src="./imgs/open.svg"
+                    alt="Open Project Icon"
+                    class="open"
                 /></a>
               </nav>
             </div>
@@ -123,7 +142,10 @@
         </article>
         <article class="project">
           <figure class="project-img">
-            <img src="./imgs/pizzaplace.png" alt="" />
+            <img
+              src="./imgs/pizzaplace.png"
+              alt="Pizzeria Website Screenshot"
+            />
             <a
               href="https://modder65.github.io/Restaurant-Page/"
               target="_blank"
@@ -133,16 +155,22 @@
           <div class="project-content">
             <div class="project-header">
               <h3>Pizzeria</h3>
-              <nav class="project-icons">
+              <nav class="project-icons" role="navigation">
                 <a
                   href="https://github.com/Modder65/Restaurant-Page"
                   target="_blank"
-                  ><img src="./imgs/github-mark.svg" alt="" class="github"
+                  ><img
+                    src="./imgs/github-mark.svg"
+                    alt="Github Logo Icon"
+                    class="github"
                 /></a>
                 <a
                   href="https://modder65.github.io/Restaurant-Page/"
                   target="_blank"
-                  ><img src="./imgs/open.svg" alt="" class="open"
+                  ><img
+                    src="./imgs/open.svg"
+                    alt="Open Project Icon"
+                    class="open"
                 /></a>
               </nav>
             </div>
@@ -154,7 +182,10 @@
         </article>
         <article class="project">
           <figure class="project-img">
-            <img src="./imgs/tictactoe.png" alt="" />
+            <img
+              src="./imgs/tictactoe.png"
+              alt="Tic-Tac-Toe Project Screenshot"
+            />
             <a href="https://modder65.github.io/Tic-Tac-Toe/" target="_blank"
               ><figcaption class="img-overlay"></figcaption
             ></a>
@@ -162,16 +193,22 @@
           <div class="project-content">
             <div class="project-header">
               <h3>Tic-Tac-Toe</h3>
-              <nav class="project-icons">
+              <nav class="project-icons" role="navigation">
                 <a
                   href="https://github.com/Modder65/Tic-Tac-Toe"
                   target="_blank"
-                  ><img src="./imgs/github-mark.svg" alt="" class="github"
+                  ><img
+                    src="./imgs/github-mark.svg"
+                    alt="Github Logo Icon"
+                    class="github"
                 /></a>
                 <a
                   href="https://modder65.github.io/Tic-Tac-Toe/"
                   target="_blank"
-                  ><img src="./imgs/open.svg" alt="" class="open"
+                  ><img
+                    src="./imgs/open.svg"
+                    alt="Open Project Icon"
+                    class="open"
                 /></a>
               </nav>
             </div>
@@ -183,7 +220,10 @@
         </article>
         <article class="project">
           <figure class="project-img">
-            <img src="./imgs/dashboard.png" alt="" />
+            <img
+              src="./imgs/dashboard.png"
+              alt="Admin Dashboard Project Screenshot"
+            />
             <a
               href="https://modder65.github.io/admin-dashboard/"
               target="_blank"
@@ -193,16 +233,22 @@
           <div class="project-content">
             <div class="project-header">
               <h3>Dashboard</h3>
-              <nav class="project-icons">
+              <nav class="project-icons" role="navigation">
                 <a
                   href="https://github.com/Modder65/admin-dashboard"
                   target="_blank"
-                  ><img src="./imgs/github-mark.svg" alt="" class="github"
+                  ><img
+                    src="./imgs/github-mark.svg"
+                    alt="Github Logo Icon"
+                    class="github"
                 /></a>
                 <a
                   href="https://modder65.github.io/admin-dashboard/"
                   target="_blank"
-                  ><img src="./imgs/open.svg" alt="" class="open"
+                  ><img
+                    src="./imgs/open.svg"
+                    alt="Open Project Icon"
+                    class="open"
                 /></a>
               </nav>
             </div>
@@ -214,18 +260,18 @@
         </article>
       </section>
     </main>
-    <footer>
+    <footer role="contentinfo">
       <address class="footer-content">
         <h2>Contact Me</h2>
         <p>1234 Random Road<br />Random Town, State 12345</p>
         <p></p>
         <div class="contact-info">
           <div class="email">
-            <img src="./imgs/call.svg" alt="" />
+            <img src="./imgs/call.svg" alt="Phone Icon" />
             <p>555-555-5555</p>
           </div>
           <div class="phone">
-            <img src="./imgs/email.svg" alt="" />
+            <img src="./imgs/email.svg" alt="Email Icon" />
             <p>fakeemail@fake.com</p>
           </div>
         </div>
@@ -234,7 +280,7 @@
         <div>
           <p>2023 Alex Green</p>
           <a href="https://github.com/Modder65?tab=repositories" target="_blank"
-            ><img src="./imgs/github-mark-white.svg" alt=""
+            ><img src="./imgs/github-mark-white.svg" alt="Github Logo Icon"
           /></a>
         </div>
       </section>
