Removed redundant aria labels and added more security to links that open in new tabs

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio showcasing my web development projects"
+    />
     <link rel="stylesheet" href="./style.css" />
     <link rel="icon" href="./imgs/icon.svg" type="image/x-icon" />
+    <script src="./script.js"></script>
     <title>Portfolio</title>
   </head>
   <body>
-    <a href="#main-content" class="skip-link">Skip to Content</a>
-    <header role="banner">
+    <a href="#main-content" class="skip-link" tabindex="1">Skip to Content</a>
+    <header>
       <section class="about-me">
         <figure class="about-me-img">
           <img src="./imgs/mountains1.jpg" alt="Mountain Landscape" />
@@ -26,39 +31,49 @@
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum.
           </p>
-          <nav class="about-me-icons" role="navigation">
+          <nav class="about-me-icons">
             <a
               href="https://github.com/Modder65?tab=repositories"
               target="_blank"
+              rel="noopener noreferrer"
               ><img src="./imgs/github-mark.svg" alt="Github Logo Icon"
             /></a>
           </nav>
         </article>
       </section>
     </header>
-    <main id="main-content" role="main">
+    <main id="main-content">
       <div class="content-heading">
         <h2>My Work</h2>
       </div>
-      <section class="projects-container" role="region">
+      <section class="projects-container">
         <article class="project">
           <figure class="project-img">
             <img src="./imgs/battleship.png" alt="Battleship Game Screenshot" />
-            <a href="https://modder65.github.io/Battleship/" target="_blank"
+            <a
+              href="https://modder65.github.io/Battleship/"
+              target="_blank"
+              rel="noopener noreferrer"
               ><figcaption class="img-overlay"></figcaption
             ></a>
           </figure>
           <div class="project-content">
             <div class="project-header">
               <h3>BattleShip</h3>
-              <nav class="project-icons" role="navigation">
-                <a href="https://github.com/Modder65/Battleship" target="_blank"
+              <nav class="project-icons">
+                <a
+                  href="https://github.com/Modder65/Battleship"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="./imgs/github-mark.svg"
                     alt="Github Logo Icon"
                     class="github"
                 /></a>
-                <a href="https://modder65.github.io/Battleship/" target="_blank"
+                <a
+                  href="https://modder65.github.io/Battleship/"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="./imgs/open.svg"
                     alt="Open Project Icon"
@@ -76,17 +91,21 @@
         <article class="project">
           <figure class="project-img">
             <img src="./imgs/weatherapp.png" alt="Weather Website Screenshot" />
-            <a href="https://modder65.github.io/Weather-App/" target="_blank"
+            <a
+              href="https://modder65.github.io/Weather-App/"
+              target="_blank"
+              rel="noopener noreferrer"
               ><figcaption class="img-overlay"></figcaption
             ></a>
           </figure>
           <div class="project-content">
             <div class="project-header">
               <h3>Weather App</h3>
-              <nav class="project-icons" role="navigation">
+              <nav class="project-icons">
                 <a
                   href="https://github.com/Modder65/Weather-App"
                   target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="./imgs/github-mark.svg"
                     alt="Github Logo Icon"
@@ -95,6 +114,7 @@
                 <a
                   href="https://modder65.github.io/Weather-App/"
                   target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="./imgs/open.svg"
                     alt="Open Project Icon"
@@ -112,21 +132,30 @@
         <article class="project">
           <figure class="project-img">
             <img src="./imgs/todolist.png" alt="Todo List Project Screenshot" />
-            <a href="https://modder65.github.io/Todo-List/" target="_blank"
+            <a
+              href="https://modder65.github.io/Todo-List/"
+              target="_blank"
+              rel="noopener noreferrer"
               ><figcaption class="img-overlay"></figcaption
             ></a>
           </figure>
           <div class="project-content">
             <div class="project-header">
               <h3>Todo List</h3>
-              <nav class="project-icons" role="navigation">
-                <a href="https://github.com/Modder65/Todo-List" target="_blank"
+              <nav class="project-icons">
+                <a
+                  href="https://github.com/Modder65/Todo-List"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="./imgs/github-mark.svg"
                     alt="Github Logo Icon"
                     class="github"
                 /></a>
-                <a href="https://modder65.github.io/Todo-List/" target="_blank"
+                <a
+                  href="https://modder65.github.io/Todo-List/"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="./imgs/open.svg"
                     alt="Open Project Icon"
@@ -150,16 +179,18 @@
             <a
               href="https://modder65.github.io/Restaurant-Page/"
               target="_blank"
+              rel="noopener noreferrer"
               ><figcaption class="img-overlay"></figcaption
             ></a>
           </figure>
           <div class="project-content">
             <div class="project-header">
               <h3>Pizzeria</h3>
-              <nav class="project-icons" role="navigation">
+              <nav class="project-icons">
                 <a
                   href="https://github.com/Modder65/Restaurant-Page"
                   target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="./imgs/github-mark.svg"
                     alt="Github Logo Icon"
@@ -168,6 +199,7 @@
                 <a
                   href="https://modder65.github.io/Restaurant-Page/"
                   target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="./imgs/open.svg"
                     alt="Open Project Icon"
@@ -187,17 +219,21 @@
               src="./imgs/tictactoe.png"
               alt="Tic-Tac-Toe Project Screenshot"
             />
-            <a href="https://modder65.github.io/Tic-Tac-Toe/" target="_blank"
+            <a
+              href="https://modder65.github.io/Tic-Tac-Toe/"
+              target="_blank"
+              rel="noopener noreferrer"
               ><figcaption class="img-overlay"></figcaption
             ></a>
           </figure>
           <div class="project-content">
             <div class="project-header">
               <h3>Tic-Tac-Toe</h3>
-              <nav class="project-icons" role="navigation">
+              <nav class="project-icons">
                 <a
                   href="https://github.com/Modder65/Tic-Tac-Toe"
                   target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="./imgs/github-mark.svg"
                     alt="Github Logo Icon"
@@ -206,6 +242,7 @@
                 <a
                   href="https://modder65.github.io/Tic-Tac-Toe/"
                   target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="./imgs/open.svg"
                     alt="Open Project Icon"
@@ -228,16 +265,18 @@
             <a
               href="https://modder65.github.io/admin-dashboard/"
               target="_blank"
+              rel="noopener noreferrer"
               ><figcaption class="img-overlay"></figcaption
             ></a>
           </figure>
           <div class="project-content">
             <div class="project-header">
               <h3>Dashboard</h3>
-              <nav class="project-icons" role="navigation">
+              <nav class="project-icons">
                 <a
                   href="https://github.com/Modder65/admin-dashboard"
                   target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="./imgs/github-mark.svg"
                     alt="Github Logo Icon"
@@ -246,6 +285,7 @@
                 <a
                   href="https://modder65.github.io/admin-dashboard/"
                   target="_blank"
+                  rel="noopener noreferrer"
                   ><img
                     src="./imgs/open.svg"
                     alt="Open Project Icon"
@@ -261,11 +301,10 @@
         </article>
       </section>
     </main>
-    <footer role="contentinfo">
+    <footer>
       <address class="footer-content">
         <h2>Contact Me</h2>
         <p>1234 Random Road<br />Random Town, State 12345</p>
-        <p></p>
         <div class="contact-info">
           <div class="email">
             <img src="./imgs/call.svg" alt="Phone Icon" />
@@ -280,7 +319,10 @@
       <section class="footer-main">
         <div>
           <p>2023 Alex Green</p>
-          <a href="https://github.com/Modder65?tab=repositories" target="_blank"
+          <a
+            href="https://github.com/Modder65?tab=repositories"
+            target="_blank"
+            rel="noopener noreferrer"
             ><img src="./imgs/github-mark-white.svg" alt="Github Logo Icon"
           /></a>
         </div>
